hiding modal overflow to avoid double scrollbars

--- a/modules/container-client/src/css/editor/modal.less
+++ b/modules/container-client/src/css/editor/modal.less
@@ -1,3 +1,7 @@
+.modal-open .modal {
+  overflow-y: hidden;
+}
+
 .modal{
 
   .modal-body{
